- Added support for opening files with "filepath:linenumber" syntax.
- Added ability to put %_ in a code closer as the place to position the cursor.
- Code closers can now contain newlines.
- Now closer text is parsed-indented by default.
- Added copy_selection_to_klipper.
- Added cut_selection_to_klipper.
- Added paste_from_klipper.
- Added delete_and_store_line_to_klipper.

0.8.4

- Added joinLines function.
- Added "yes and (s)top" as a find-and-replace option.
- Added '-h' to be synonymous with '--help'.
- Added "Ctrl-Q to quit" to opening message.
- Added close_code feature.
- Added list selection.
- Added buffer selection.
- Added delete_newline_on_delete_to_eol option.
- Added select_block command.
- Slight (8%) display performance improvement.
- Moved source code from svn to github.com.

0.8.3

- Extended ASCII characters (128 to 254) are now typeable.
- Added elsif as a Ruby unindenter.
- Significant internal refactoring.
- First working rubygem.
- Added HAML syntax highlighting.
- Configuration can now be downloaded from the Internet if missing.
- Updated README and changed setup.rb installation method.

0.8.2

- Added ability to use ';' in keychains.
- Added the printKeychain command.
- Augmented default conf to include some KDE 3.5 konsole keychains for common keys.
- Added use_magic_file setting; default to off.
- Added a clipboard/selected diff keybinding.

0.8.1

- Added choice prompt iteration.
- Added a cursor stack for jumping back and forth between recently visited locations in the buffer.
- Introduced cursorReturn command (to move through the cursor stack).
- replaceAll now sets modified flag.
- Speed of many multi-line operations improved.
- Fixed parsedIndent logic in cases of adjacent indenter and unindenter.
- goToLine command now supports a column argument.
- goToLine command's line and column argument are now both optional.
- goToLine also takes a +/- number of lines argument.