@@ -255,10 +255,11 @@ key alt+u;removeSelection
 
 # If you are using KDE, you can uncomment these lines to synchronize
 # the Diakonos clipboard with the KDE clipboard
-#key ctrl+c    copy_selection_to_klipper
-#key ctrl+x    cut_selection_to_klipper
-#key ctrl+v    paste_from_klipper
-#key ctrl+k    delete_and_store_line_to_klipper
+#key ctrl+c      copy_selection_to_klipper
+#key ctrl+x      cut_selection_to_klipper
+#key ctrl+v      paste_from_klipper
+#key ctrl+k      delete_and_store_line_to_klipper
+#key ctrl+alt+k  delete_to_eol_to_klipper
 
 key ctrl+b         select_block
 # Select file diff in a patch
